--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
   <body>
     hi hello just testing github pages<br />
     <button id="button">click</button>
-    <span id="clicks" />
+    <span id="clicks">0</span>
+  </body>
+</html>
