--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       document.onload = function () {
         document.getElementByID("button").addEventListener("click", btnclick);
       }
-      setInterval(50,uptade);
+      setInterval(50,update);
       function btnclick() {
         x += 1;
       }
